--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Coming Soon Bootstrap Template - Coming Soon</title>
+    <title>Coming Soon</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -20,23 +20,23 @@
     <div class="cover-container">
       <div class="masthead clearfix">
         <div class="inner">
-          <h3 class="masthead-brand">Coming Soon</h3>
+          <h3 class="masthead-brand">Ijaj Ahamed </h3>
           <nav class="nav nav-masthead">
-            <a class="nav-link nav-social" href="#" title="Facebook"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
-            <a class="nav-link nav-social" href="#" title="Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-            <a class="nav-link nav-social" href="#" title="Youtube"><i class="fab fa-youtube" aria-hidden="true"></i></a>
-            <a class="nav-link nav-social" href="#" title="Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+            <a class="nav-link nav-social" href="https://www.facebook.com/ijaj.abdullah1/" title="Facebook"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
+            <a class="nav-link nav-social" href="https://twitter.com/ahamed_ijaj" title="Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+            <a class="nav-link nav-social" href="https://www.youtube.com/" title="Youtube"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+            <a class="nav-link nav-social" href="https://www.instagram.com/ijaj._.ahamed/" title="Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
           </nav>
         </div>
       </div>      
       <div class="inner cover">
-        <h1 class="cover-heading">The adventure Begins</h1>
-        <p class="lead cover-copy">Hold tight as we get our working robots together and produce the most astonishing product ever.</p>
+        <h1 class="cover-heading">COMING SOON</h1>
+        <p class="lead cover-copy">Hold tight as i get my working robots together and produce the most astonishing product ever.</p>
         <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Notify Me</button></p>
       </div>
       <div class="mastfoot">
         <div class="inner">
-          <p>&copy; Your Company. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a>.</p>
+          <p>&copy; data analyst : <a href="https://templateflip.com/" target="_blank">portfolio</a>.</p>
         </div>
       </div>
       <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
