--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <nav class="nav nav-masthead">
             <a class="nav-link nav-social" href="https://www.facebook.com/ijaj.abdullah1/" title="Facebook"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
             <a class="nav-link nav-social" href="https://twitter.com/ahamed_ijaj" title="Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-            <a class="nav-link nav-social" href="https://www.youtube.com/" title="Youtube"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+            <a class="nav-link nav-social" href="https://www.linkedin.com/in/ijajah/" title="linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
             <a class="nav-link nav-social" href="https://www.instagram.com/ijaj._.ahamed/" title="Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
           </nav>
         </div>
