--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
       </div>      
       <div class="inner cover">
+        <h1 class="cover-heading">Portfolio website</h1>
         <h1 class="cover-heading">COMING SOON</h1>
         <p class="lead cover-copy">Hold tight as i get my working robots together and produce the most astonishing product ever.</p>
         <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Notify Me</button></p>
